# x_to_discord

./: .env.example  LICENSE  README.md  Readme.md  main.py  pyproject.toml  state.json  translations_cache.json
app/: config.py  discord_sender.py  fake_io.py  formatter.py  state_store.py  translate_ultra.py  x_client.py
fake_data/: fake_markminervini.json
tests/: test_translate_ultra.py
